Fix site property when the app is installed

--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,6 @@
   "theme_color": "#00BFFF",
   "background_color": "#FFFFFF",
   "display": "standalone",
-  "start_url": "/index.html"
+  "start_url": "/qr_scanner/",
+  "scope": "/qr_scanner/",
 }
